--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -19,6 +19,7 @@
 
   .categorie p {
     margin: auto 0.8em;
+    color: var(--c-invert);
   }
 
   /* Layout */
@@ -101,7 +102,7 @@
 
   footer h2,
   h3,
-  h4 {
+  p {
     color: var(--c-light);
   }
 
@@ -253,6 +254,7 @@
 
   .categorie p {
     margin: auto 0.8em;
+    color: var(--c-invert);
   }
 
   /* layout */
@@ -454,6 +456,15 @@
         width: fit-content;
         padding: 0.4em;
         margin: 0.8em;
+        fill: var(--c-light);
+      }
+
+      .footer-links a:hover svg {
+        fill: var(--c-primary);
+      }
+    
+      .footer-links a:focus svg {
+        fill: var(--c-primary);
       }
     
       footer nav a {
